# MintPlayer.Polyglot

./: .gitignore  CLAUDE.md  CMakeLists.txt  Directory.Build.props  LICENSE  MintPlayer.Polyglot.sln  README.md  nx.json  package-lock.json  package.json  project.json
.claude/skills/build-and-test/: SKILL.md
.github/workflows/: auto-tag.yml  ci.yml  publish-plugins.yml  publish-vs.yml  publish-vscode.yml  release.yml
docs/: plugin-authoring.md
docs/comparison/: haxe.md
docs/design/: backend-spec.md  frontend-skins.md  json-plugins.md  plugins-and-targets.md
docs/lang/: SPEC.md  for-csharp-devs.md  for-typescript-devs.md  grammar.ebnf
docs/lang/samples/: 01_functions.pg  02_records_operators.pg  03_enums_unions_match.pg  04_generics.pg  05_iterators.pg  06_exceptions.pg  07_using_disposal.pg  08_extensions.pg  09_strings.pg  fruitcake_sketch.pg
docs/prd/: PLAN.md  POLYGLOT_PRD.md
docs/prd/e2e-coverage-wave2/: ANALYSIS.md  PLAN.md  PRD.md
docs/prd/e2e-scenario-coverage/: PLAN.md  PRD.md
docs/prd/gate-speedup/: ANALYSIS.md  NX-EVALUATION.md  PLAN.md  PRD.md
docs/prd/issue-11-features/: PLAN.md  PRD.md
docs/prd/issue-14-prelude/: PLAN.md  PRD.md
docs/prd/issue-27-explicit-typing/: PLAN.md  PRD.md
docs/prd/issue-29-36-batch/: PLAN.md  PRD.md
docs/prd/issue-30-plugin-autodownload/: PLAN.md  PRD.md
docs/prd/issue-9-codegen/: PLAN.md  PRD.md
docs/prd/issue-sweep/: ANALYSIS.md  PLAN.md  PRD.md
docs/prd/p37-feature-batch/: ANALYSIS.md  ATTRIBUTES-RESEARCH.md  PLAN.md  PRD.md
docs/prd/source-languages/: PRD.md
editors/: README.md
editors/vs/: .gitignore  MintPlayer.Polyglot.VisualStudio.csproj  PolyglotCli.cs  PolyglotContentType.cs  PolyglotLanguageClient.cs  README.md  overview.md  publishManifest.json  source.extension.vsixmanifest
editors/vscode/: .gitignore  .vscodeignore  README.md  extension.js  language-configuration.json  package-lock.json  package.json
editors/vscode/scripts/: package-all.ps1  stage-cli.ps1
editors/vscode/syntaxes/: polyglot.tmLanguage.json
editors/vscode/testbench/: geometry.pg  hello.pg  pgconfig.json
plugins/csharp/: package.json  polyglot-plugin.json
plugins/kotlin/: polyglot-plugin.json
plugins/php/: package.json  polyglot-plugin.json
plugins/python/: package.json  polyglot-plugin.json
plugins/typescript/: package.json  polyglot-plugin.json
scripts/: build-and-test.ps1  build-linux.sh  check-buildfile-parity.ps1  coverage.ps1  msbuild-solution.ps1  nx-leg.ps1  scaffold-kotlin.py
scripts/lib/: OracleCompile.ps1
src/MintPlayer.Polyglot.Cli/: MintPlayer.Polyglot.Cli.vcxproj
src/MintPlayer.Polyglot.Cli/src/: exe_path.hpp  glob.hpp  inflate.hpp  lockfile.hpp  main.cpp  pgconfig.hpp  plugincache.hpp  pluginresolve.hpp  registry.hpp  semver.hpp  sha.hpp  tar.hpp  watch.hpp
src/MintPlayer.Polyglot.Core/: MintPlayer.Polyglot.Core.vcxproj
src/MintPlayer.Polyglot.Core/src/: backend.cpp  backend_engine.cpp  backend_spec_json.cpp  capability.cpp  capture_analysis.cpp  compiler.cpp  emit_csharp.cpp  emit_python.cpp  emit_typescript.cpp  emitter_base.cpp  hoist_block_lambdas.cpp  ir.cpp  json.cpp  lexer.cpp  lower.cpp  parser.cpp  pg_printer.cpp  polyglot.cpp  sema.cpp
src/MintPlayer.Polyglot.MSBuild/: MintPlayer.Polyglot.MSBuild.csproj
tests/MintPlayer.Polyglot.Tests/: MintPlayer.Polyglot.Tests.vcxproj
tests/MintPlayer.Polyglot.Tests/src/: gzip_fixtures.hpp  tests_main.cpp
tests/cli/: run-cli-smoke.ps1
tests/conformance/: .gitignore  README.md  gen-scale.ps1  run-conformance.ps1  run-diff.ps1  run-kotlin.ps1  run-php.ps1  run-python.ps1
tests/conformance/programs/: arithmetic.pg  array_param_mutation.pg  arrays.pg  as_cast.pg  async_await.pg  async_compose.pg  block_lambda.pg  bool_print.pg  cast_float_int.pg  casts.pg  casts_call.pg  catch_when.pg  char_escapes.pg  class_identity_eq.pg  closure_loop_capture.expected  closure_loop_capture.pg  closure_this.pg  closures.pg  codepoints.pg  codepoints_values.pg  collections.pg  compound_assign.pg  counter.pg  disposal.pg  disposal_throw.pg  do_while.expected  do_while.pg  empty_list.pg  enum_values.pg  enums.pg  equality.pg  equality_composite.pg  exceptions.pg  expect_actual.pg  extension_generic.pg  extensions.pg  extern_ffi.pg  f32.pg  file_io.pg  file_io_edges.pg  (+89 more)
tests/fidelity/: run-roundtrip.ps1
tests/lsp/: run-lsp.ps1
tests/msbuild/: run-nuget.ps1
tests/nullable/: run-nullable.ps1
tests/refusals/: run-refusals.ps1
tests/refusals/fixtures/: activator_type.pg  await_outside_async.pg  block_match_arm.pg  decimal_type.pg  dynamic_type.pg  empty_list_uninferable.pg  finalizer.pg  good.pg  implicit_conversion.pg  is_union.pg  lock_stmt.pg  (+6 more)
tests/registry/: registry-server.js  run-registry.ps1
tests/samples/: run-compile.ps1  run-emit.ps1
tests/watch/: run-watch.ps1
(+25 files in other folders)
